# hapi

./: Cargo.toml  README.md
src/: auth.rs  cli.rs  config.rs  db.rs  file.rs  main.rs
src/routes/: error.rs  mod.rs  user.rs
