[package]
name = "hapi"
version = "0.1.0"
authors = ["Justin Guidroz <justin.guidroz@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
clap = "2.25"
hdb = { git = "https://github.com/geauxvirtual/hdb.git", features = ["with-openssl"] }
argon2rs = "0.2"
rand = "0.3"
chrono = "0.4"
uuid = { version = "0.5", features = ["serde"] }
jsonwebtoken = "2"
multipart = { version = "0.13", features = ["server"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "uuid"]
